--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <div id="elm-app"></div>
-    <script type="module" src="../src/index.js"></script>
+    <script src="../src/index.js"></script>
 </body>
 </html> 
